@@ -191,5 +191,9 @@
 
   // Enable or disable HTTP Keep-Alive (experimental). Set this option
   // to "true" only in the case of high HTTP loads.
-  "KeepAlive" : false
+  "KeepAlive" : false,
+
+  // If this option is set to "false", Orthanc will run in index-only
+  // mode. The DICOM files will not be stored on the drive.
+  "StoreDicom" : true
 }
